--- a/eCapa/Pages/Admin/D0.razor
+++ b/eCapa/Pages/Admin/D0.razor
@@ -16,7 +16,7 @@
         </button>
         @AlertMessage
     </div>
-    <EditForm Model="@gen" OnValidSubmit="@SaveGeneralInformation" class="">
+    <EditForm Model="@gen" OnValidSubmit="@(()=>SaveGeneralInformation(false))" class="">
         <DataAnnotationsValidator />
         <ValidationSummary />
         <div class="form-group card">
@@ -87,12 +87,12 @@
                         </InputSelect>
                     </div>
                     <div class="form-group col-sm-12 col-md-4">
-                        <label><strong>Department Manager Approver:</strong></label>
+                        <label><strong>Group Manager Approver:</strong></label>
                         <InputSelect @bind-Value="@gen.DepartmentApprover" class="form-control">
                             <option selected disabled value="">Select Department Manager Approver</option>
                             @if (DepartmentManagers == null || DepartmentManagers.Count() == 0)
                             {
-                                <option value="">No Department Approvers Found</option>
+                                <option value="">No Group Manager Approvers Found</option>
                             }
                             else
                             {
@@ -109,7 +109,7 @@
                             <option selected disabled value="">Select Verification Approver</option>
                             @if (Verifiers == null || Verifiers.Count() == 0)
                             {
-                                <option value="">No Verifiers Approvers Found</option>
+                                <option value="">No Verifier Approvers Found</option>
                             }
                             else
                             {
@@ -179,11 +179,21 @@
                     </div>
                     <div class="form-group col-sm-12 col-md-4">
                         <label><strong>Standard:</strong></label>
-                        <InputSelect @bind-Value="gen.Standard" class="form-control">
+                        <InputSelect Value="IdStandard"
+                                     ValueChanged="@((string IdStandard) => StandardHasChanged(IdStandard))"
+                                     ValueExpression="(() => IdStandard)"
+                                     class="form-control">
                             <option selected disabled value="">Select Standard</option>
-                            @foreach (var standard in Enum.GetValues(typeof(standards)))
+                            @if (Standards == null || Standards.Count() == 0)
                             {
-                                <option value="@standard">@standard</option>
+                                <option value="">No Standards Found</option>
+                            }
+                            else
+                            {
+                                @foreach (var standard in Standards)
+                                {
+                                    <option value="@standard.IdStandard">@standard.Name</option>
+                                }
                             }
                         </InputSelect>
                     </div>
@@ -194,13 +204,13 @@
                                      ValueExpression="(() => IdClause)"
                                      class="form-control">
                             <option selected disabled value="">Select Clause</option>
-                            @if (ClausesByProcess == null || ClausesByProcess.Count() == 0)
+                            @if (ClausesByStandard == null || ClausesByStandard.Count() == 0)
                             {
                                 <option value="">No Clauses Found</option>
                             }
                             else
                             {
-                                @foreach (var c in ClausesByProcess)
+                                @foreach (var c in ClausesByStandard)
                                 {
                                     <option value="@c.ClauseId">@c.ClauseNumber - @c.ClauseName</option>
                                 }
@@ -213,7 +223,7 @@
                             <option selected disabled value="">Select Sub Clause</option>
                             @if (SubClausesByClause == null || SubClausesByClause.Count() == 0)
                             {
-                                <option value="">No SubClausesByClause Found</option>
+                                <option value="">No Sub Clauses Found</option>
                             }
                             else
                             {
@@ -235,7 +245,7 @@
                     </div>
                     <div class="form-group col-sm-12 col-md-4">
                         <label><strong>Owner:</strong></label>
-                        <InputSelect @bind-Value="@gen.Owner" class="form-control">
+                        <InputSelect @bind-Value="@gen.Owner" class="form-control" @onblur="@(() => ValidateIfCanSave())">
                             <option selected disabled value="">Select CAPA Owner</option>
                             @if (Owners == null || Owners.Count() == 0)
                             {
@@ -254,12 +264,13 @@
                 <div class="form-row">
                     <div class="form-group col-sm-12 col-md-12">
                         <label><strong>Symptom:</strong></label>
-                        <InputTextArea @bind-Value="gen.Symptom" rows="4" class="form-control" placeholder="Symptom – What is the observed deviation by the internal / external customer/certification/standard/others, and how was it found:" />
+                        <InputTextArea @bind-Value="gen.Symptom" disabled="@SymptomDisabled" @onblur="@(()=>SaveGeneralInformation(true))" rows="4" class="form-control" placeholder="Symptom – What is the observed deviation by the internal / external customer/certification/standard/others, and how was it found:" />
                     </div>
                 </div>
                 <hr />
                 <h3>D1 - Building the Team</h3>
                 <hr />
+                <p hidden="@HideButton">Add Team Members <button type="button" class="btn btn-primary btn-sm" @onclick="@(async ()=> OpenDeleteDialog(gen.GeneralInformartionId.ToString()))">+</button></p>
                 <div class="table-responsive">
                     <table class="table table-striped table-sm small">
                         <thead class="thead-light">
@@ -294,6 +305,20 @@
                                         <td>@t.User.NormalizedEmail</td>
                                     </tr>
                                 }
+                                if (ExtraMembers != null && ExtraMembers.Count() > 0)
+                                {
+
+                                    @foreach (var e in ExtraMembers)
+                                    {
+                                        <tr>
+                                            <td>@e.IdRoleNavigation.RoleName</td>
+                                            <td>@e.IdUserNavigation.NormalizedUserName.Substring(0, e.IdUserNavigation.NormalizedUserName.IndexOf("@"))</td>
+                                            <td>@e.IdUserNavigation.PhoneNumber</td>
+                                            <td>@e.IdUserNavigation.NormalizedEmail</td>
+                                        </tr>
+                                    }
+                                }
+
                             }
                         </tbody>
                     </table>
@@ -316,6 +341,13 @@
 
         </div>
     </EditForm>
+    @if (DeleteDialogOpen)
+    {
+        <ModalAdditionalMembers Title="Add Team Members"
+                         CapaId="@idtopass"
+                         OnClose="@OnDeleteDialogClose">
+        </ModalAdditionalMembers>
+    }
 </div>
 @code {
     [Parameter]
@@ -327,16 +359,20 @@
     private IEnumerable<Customers> AllCustomers { get; set; }
     private IEnumerable<DDepartment> AllDepartments { get; set; }
     private List<DProcesses> ProcessesByDepartment { get; set; }
-    private List<DClauses> ClausesByProcess { get; set; }
+    private List<DClauses> ClausesByStandard { get; set; }
+    private List<Dstandards> Standards { get; set; }
     private IEnumerable<DSubClauses> SubClausesByClause { get; set; }
     IEnumerable<DRoles> GetAllRoles { get; set; }
     IEnumerable<AspNetUsers> GetAllUsers { get; set; }
+    List<DCapaExtraMembers> ExtraMembers = new List<DCapaExtraMembers>();
     List<AspNetUsers> QaManagers { get; set; }
     List<AspNetUsers> DepartmentManagers { get; set; }
     List<AspNetUsers> Verifiers { get; set; }
     List<DProcessRoles> processAssRoles = new List<DProcessRoles>();
     public string IdCustomer { get; set; }
+    public bool DeleteDialogOpen { get; set; }
     public string IdDepartment { get; set; }
+    public string IdStandard { get; set; }
     public string loggedInUser = string.Empty;
     public string IdProcess { get; set; }
     public string IdClause { get; set; }
@@ -347,6 +383,8 @@
     public string body { get; set; }
     public bool HideAlert { get; set; } = true;
     public string AlertMessage { get; set; } = string.Empty;
+    public bool SymptomDisabled { get; set; } = true;
+    public bool HideButton { get; set; } = true;
     public string AlertType { get; set; } = "danger";
     private void resetalert()
     {
@@ -360,7 +398,18 @@
         AlertType = type;
         HideAlert = false;
     }
-
+    private void OpenDeleteDialog(string id)
+    {
+        idtopass = id;
+        DeleteDialogOpen = true;
+        StateHasChanged();
+    }
+    private async Task OnDeleteDialogClose()
+    {
+        ExtraMembers = await GetAddtionalTeamMembers();
+        await Task.Run(() => DeleteDialogOpen = false);
+        StateHasChanged();
+    }
     enum types
     {
         Corrective,
@@ -382,13 +431,17 @@
         Major,
         Internal_Finding
     }
-    public async Task SaveGeneralInformation()
+    public async Task SaveGeneralInformation(bool blur)
     {
+
         int idCustomer = string.IsNullOrEmpty(IdCustomer) ? 0 : Convert.ToInt32(IdCustomer);
         int idProcess = string.IsNullOrEmpty(IdProcess) ? 0 : Convert.ToInt32(IdProcess);
         int idDepartment = string.IsNullOrEmpty(IdDepartment) ? 0 : Convert.ToInt32(IdDepartment);
         int idClause = string.IsNullOrEmpty(IdClause) ? 0 : Convert.ToInt32(IdClause);
         int idSubClause = string.IsNullOrEmpty(IdSubClause) ? 0 : Convert.ToInt32(IdSubClause);
+        int idStandard = string.IsNullOrEmpty(IdStandard) ? 0 : Convert.ToInt32(IdStandard);
+        var standard = Standards.FirstOrDefault(x => x.IdStandard == idStandard);
+
         gen.LastModifiedBy = loggedInUser;
         gen.ProcessId = idProcess;
         gen.DepartmentId = idDepartment;
@@ -396,7 +449,10 @@
         gen.Clause = idClause;
         gen.SubClause = idSubClause;
         gen.Status = "Pending Action Plan Approval";
+        gen.Standard = standard.Name;
         bool isNew = false;
+
+
         if (string.IsNullOrEmpty(IdCar))
         {
             db.GeneralInformation.Add(gen);
@@ -423,8 +479,8 @@
                 await db.SaveChangesAsync();
             }
             IdCar = gen.CapaNumber;
-            AlertShow("success", $"{IdCar} saved correctly.");
-            if (isNew)
+
+            if (!blur)
             {
                 string TeamMembers = string.Empty;
                 foreach (var member in processAssRoles)
@@ -439,20 +495,39 @@
                     }
                 }
                 body = await GetEmailBody();
-                sendEmail = new SendEmailClass
+                if (isNew)
+                {
+                    sendEmail = new SendEmailClass
                     (
                         gen.OwnerNavigation.Email,
                         TeamMembers,
                         body,
                         $"New Capa No.: {IdCar} created"
                     );
+                }
+                else
+                {
+                    sendEmail = new SendEmailClass
+                    (
+                        gen.OwnerNavigation.Email,
+                        TeamMembers,
+                        body,
+                        $"Capa No.: {IdCar} updated"
+                    );
+                }
+                AlertShow("success", $"{IdCar} saved correctly.");
                 var email = sendEmail.SendEmailGeneric();
+                NavigationManager.NavigateTo($"/Admin/general/{gen.GeneralInformartionId.ToString()}");
             }
-            NavigationManager.NavigateTo($"/Admin/general/{gen.GeneralInformartionId.ToString()}");
+            else
+            {
+                HideButton = false;
+            }
+
         }
         catch (Exception ex)
         {
-            AlertShow("danger", ex.InnerException.ToString());
+            AlertShow("danger", ex.Message.ToString());
             return;
         }
     }
@@ -487,6 +562,9 @@
         DepartmentManagers = await GetDepartmentManagers();
         Verifiers = await GetVerifiers();
         Owners = await GetOwners();
+        Standards = await GetStandards();
+
+
     }
     protected async Task GetInitialDataWhenExists(int id)
     {
@@ -496,8 +574,14 @@
         await DepartmentHasChanged(IdDepartment);
         IdProcess = gen.ProcessId.ToString();
         await ProcessHasChanged(IdProcess);
+        var standard = Standards.FirstOrDefault(x => x.Name == gen.Standard);
+        IdStandard = standard.IdStandard.ToString();
+        await StandardHasChanged(IdStandard);
         IdClause = gen.Clause.ToString();
         await ClauseHasChanged(IdClause);
+        ExtraMembers = await GetAddtionalTeamMembers();
+        SymptomDisabled = false;
+        HideButton = false;
     }
     private async Task<List<Customers>> GetCustomersList()
     {
@@ -533,17 +617,23 @@
     {
         IdProcess = idprocess;
         int id = Convert.ToInt32(IdProcess);
-        List<DProcessClauses> clauseList = new List<DProcessClauses>();
-        clauseList = await db.DProcessClauses.Where(x => x.ProcessId == id).ToListAsync();
-        ClausesByProcess = new List<DClauses>();
+        processAssRoles = await GetProcessRoles(id);
+
+    }
+    private async Task StandardHasChanged(string idstandard)
+    {
+        IdStandard = idstandard;
+        int id = Convert.ToInt32(IdStandard);
+        List<DStandardClause> clauseList = new List<DStandardClause>();
+        clauseList = await db.DStandardClause.Where(x => x.StandardId == id).ToListAsync();
+        ClausesByStandard = new List<DClauses>();
+
 
         foreach (var clause in clauseList)
         {
             var c = await db.DClauses.FirstOrDefaultAsync(x => x.ClauseId == clause.ClauseId);
-            ClausesByProcess.Add(c);
+            ClausesByStandard.Add(c);
         }
-        processAssRoles = await GetProcessRoles(id);       
-       
     }
     private async Task<List<DProcessRoles>> GetProcessRoles(int id)
     {
@@ -551,6 +641,7 @@
     }
     private async Task ClauseHasChanged(string idclause)
     {
+
         IdClause = idclause;
         int id = Convert.ToInt32(IdClause);
         SubClausesByClause = await db.DSubClauses.Where(x => x.ClauseId == id).ToListAsync();
@@ -558,6 +649,10 @@
     private async Task<List<DRoles>> AllRoles()
     {
         return await db.DRoles.ToListAsync();
+    }
+    private async Task<List<Dstandards>> GetStandards()
+    {
+        return await db.Dstandards.Where(x => x.IsDeleted.Equals(false)).ToListAsync();
     }
     private async Task<List<AspNetUsers>> GetAllUsersM()
     {
@@ -640,5 +735,35 @@
         body += $"<p>CAPA requires you're attention, click the <a href='http://10.131.40.41:4401/Admin/general/{gen.GeneralInformartionId}'>Link</a> to access the system.</p>";
         return body;
 
+    }
+    protected bool ValidateIfCanSave()
+    {
+
+        if (string.IsNullOrEmpty(gen.Type)) return false;
+        if (string.IsNullOrEmpty(gen.Source)) return false;
+        if (string.IsNullOrEmpty(gen.Severity)) return false;
+        if (string.IsNullOrEmpty(gen.QaManagerApprover)) return false;
+        if (string.IsNullOrEmpty(gen.DepartmentApprover)) return false;
+        if (string.IsNullOrEmpty(gen.Verifier)) return false;
+
+        if (string.IsNullOrEmpty(IdCustomer)) return false;
+        if (string.IsNullOrEmpty(IdProcess)) return false;
+        if (string.IsNullOrEmpty(IdDepartment)) return false;
+        if (string.IsNullOrEmpty(IdClause)) return false;
+        if (string.IsNullOrEmpty(IdSubClause)) return false;
+        if (string.IsNullOrEmpty(IdStandard)) return false;
+        if (string.IsNullOrEmpty(gen.AuditReportNumber)) return false;
+        if (gen.ExpectedClosureDate == DateTime.MinValue) return false;
+        if (string.IsNullOrEmpty(gen.Owner)) return false;
+
+        SymptomDisabled = false;
+
+        return true;
+
+    }
+    private async Task<List<DCapaExtraMembers>> GetAddtionalTeamMembers()
+    {
+        var members = await db.DCapaExtraMembers.Where(x => x.IdCapa == gen.GeneralInformartionId).ToListAsync();
+        return members;
     }
 }
