--- a/eCapa/Pages/Index.razor
+++ b/eCapa/Pages/Index.razor
@@ -6,6 +6,31 @@
     <div class="card-columns">
         <div class="card @Tasks text-white al-dash">
             <div class="card-body">
+                <span class="badge @TaskBadge">My Capas</span>
+                @if (TaskList == null)
+                {
+                    <div class="text-center">
+                        <h1 class="text-center">
+                            <span class="oi oi-spreadsheet text-black-50" aria-hidden="true"></span>
+                        </h1>
+                        <a href="MyCapas"><strong>My Capas</strong></a>
+                    </div>
+                }
+                else
+                {
+                    <div class="text-center">
+                        <h1 class="text-center">
+                            <span class="oi oi-spreadsheet text-black-50 " aria-hidden="true"></span>
+                        </h1>
+                        <a href="MyCapas"><strong>My Capas</strong></a>
+                    </div>
+                }
+            </div>
+        </div>
+
+
+        <div class="card @Tasks text-white al-dash">
+            <div class="card-body">
                 <span class="badge @TaskBadge">eCapa work list</span>
                 @if (TaskList == null)
                 {
