--- a/eCapa/Shared/NavMenu.razor
+++ b/eCapa/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
                     <span class="oi oi-plus" aria-hidden="true"></span> New CAPA
                 </NavLink>
             </li>
-            <li class="nav-item px-3">
+            <li class="nav-item px-3" id="admin-nav-link">
                 <NavLink class="nav-link" @onclick="()=>expandSubNav = !expandSubNav">
                     <span class="oi oi-cog" aria-hidden="true"></span> Admin
                 </NavLink>
@@ -44,6 +44,11 @@
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="Admin/ProcessList" @onclick="@(()=>HandleClick("Admin/ProcessList"))">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Processes
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="Admin/StandardList" @onclick="@(()=>HandleClick("Admin/StandardList"))">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Standards
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
